[gd_scene load_steps=44 format=3 uid="uid://bmrf0bvbng7ux"]

[ext_resource type="Script" uid="uid://cehjf26uxtsy3" path="res://Entities/enemies/Common/HarpoonFish/harpoon_fish.gd" id="1_ujw4y"]
[ext_resource type="Texture2D" uid="uid://bn28s8kbgp233" path="res://assets/enemy/Harpoon Fish/HarpoonFish_Throw.png" id="2_g3c42"]
[ext_resource type="Resource" uid="uid://bjtmp64k5yp2" path="res://Entities/enemies/Common/HarpoonFish/HarpoonFishStat.tres" id="2_jcsf1"]
[ext_resource type="Texture2D" uid="uid://bcdwb1gnvqobq" path="res://assets/enemy/Harpoon Fish/HarpoonFish_Idle.png" id="3_m2fsh"]
[ext_resource type="Texture2D" uid="uid://dwrgivcj73ub8" path="res://assets/enemy/Harpoon Fish/HarpoonFish_Run.png" id="4_q8f30"]
[ext_resource type="PackedScene" uid="uid://cqmc7ebhwjn8f" path="res://Components/Enemies/Combat/ContactDamage_Component/contact_damage_component.tscn" id="5_5c0bm"]
[ext_resource type="PackedScene" uid="uid://dc3v1kmk4vbwx" path="res://Components/Enemies/Locomotion/Movement_Component/movement_component.tscn" id="6_jcsf1"]
[ext_resource type="PackedScene" uid="uid://ctd5ah1sqp6k3" path="res://Components/Enemies/Combat/Detection_Component/detection_component.tscn" id="7_l6gv4"]
[ext_resource type="PackedScene" uid="uid://k76vye5mtty1" path="res://Components/Common/Knockback_Component/knockback_component.tscn" id="8_eg40r"]
[ext_resource type="PackedScene" uid="uid://y7a41xekksbp" path="res://Components/Common/Hitbox_Component/hitbox_component.tscn" id="9_bsni6"]
[ext_resource type="PackedScene" uid="uid://drenvy30uh7mq" path="res://Components/Common/Health_Component/health_component.tscn" id="10_bseha"]
[ext_resource type="PackedScene" uid="uid://bcp8se18liu1" path="res://Components/Common/Death_Component/death_component.tscn" id="11_syx0i"]
[ext_resource type="PackedScene" uid="uid://cwj7bijrp7jiv" path="res://Components/Enemies/Locomotion/Wander_Component/wander_component.tscn" id="13_l6gv4"]
[ext_resource type="PackedScene" uid="uid://bj01s28atb4fl" path="res://Components/Enemies/Particle/death_particle_component.tscn" id="14_bseha"]
[ext_resource type="Script" uid="uid://c7uwo450wjcic" path="res://Components/Enemies/Particle/death_particle_component.gd" id="15_syx0i"]
[ext_resource type="PackedScene" uid="uid://b2elanspxh4oy" path="res://Particle/EnemyDeadParticle.tscn" id="16_l0yf8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_h8mk4"]
atlas = ExtResource("2_g3c42")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_40yba"]
atlas = ExtResource("2_g3c42")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_h2aif"]
atlas = ExtResource("2_g3c42")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_lajgx"]
atlas = ExtResource("2_g3c42")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_kasv7"]
atlas = ExtResource("2_g3c42")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ermwp"]
atlas = ExtResource("2_g3c42")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_nx8mt"]
atlas = ExtResource("2_g3c42")
region = Rect2(1152, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7buh"]
atlas = ExtResource("2_g3c42")
region = Rect2(1344, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_rym7h"]
atlas = ExtResource("3_m2fsh")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_vg1x5"]
atlas = ExtResource("3_m2fsh")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_qotht"]
atlas = ExtResource("3_m2fsh")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_47jsf"]
atlas = ExtResource("3_m2fsh")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_eo4ei"]
atlas = ExtResource("3_m2fsh")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_dison"]
atlas = ExtResource("3_m2fsh")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_n41x8"]
atlas = ExtResource("3_m2fsh")
region = Rect2(1152, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ysgjo"]
atlas = ExtResource("3_m2fsh")
region = Rect2(1344, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_7gid4"]
atlas = ExtResource("4_q8f30")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_h3l76"]
atlas = ExtResource("4_q8f30")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_m3hio"]
atlas = ExtResource("4_q8f30")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdxfu"]
atlas = ExtResource("4_q8f30")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_mo04j"]
atlas = ExtResource("4_q8f30")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_px18w"]
atlas = ExtResource("4_q8f30")
region = Rect2(960, 0, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_2mvqj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8mk4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_40yba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h2aif")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lajgx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kasv7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ermwp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nx8mt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7buh")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rym7h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vg1x5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qotht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_47jsf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eo4ei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dison")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n41x8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ysgjo")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7gid4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h3l76")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m3hio")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdxfu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mo04j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_px18w")
}],
"loop": false,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_p200p"]
radius = 29.666664
height = 59.33333

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5ffra"]
radius = 36.333332
height = 95.33333

[sub_resource type="CircleShape2D" id="CircleShape2D_y5vj3"]
radius = 746.68335

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y5vj3"]
size = Vector2(76.666664, 66.66666)

[node name="HarpoonFish" type="CharacterBody2D" node_paths=PackedStringArray("movement_component", "wander_component") groups=["enemy"]]
position = Vector2(1, 0)
scale = Vector2(0.6, 0.6)
collision_mask = 67
motion_mode = 1
wall_min_slide_angle = 0.017453292
script = ExtResource("1_ujw4y")
HarpoonFishStats = ExtResource("2_jcsf1")
movement_component = NodePath("Components/MovementComponent")
wander_component = NodePath("Components/WanderComponent")

[node name="attack" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_2mvqj")
animation = &"walk"
offset = Vector2(0, -15)

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -14)
rotation = -1.5707964
shape = SubResource("CapsuleShape2D_p200p")

[node name="Components" type="Node2D" parent="."]

[node name="ContactDamageComponent" parent="Components" instance=ExtResource("5_5c0bm")]

[node name="ContactDamage_Collision" type="CollisionShape2D" parent="Components/ContactDamageComponent"]
position = Vector2(-1, -23.999998)
rotation = 3.1415925
shape = SubResource("CapsuleShape2D_5ffra")

[node name="MovementComponent" parent="Components" node_paths=PackedStringArray("body", "detaction_component") instance=ExtResource("6_jcsf1")]
body = NodePath("../..")
detaction_component = NodePath("../DetectionComponent")

[node name="DetectionComponent" parent="Components" instance=ExtResource("7_l6gv4")]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Components/DetectionComponent"]
shape = SubResource("CircleShape2D_y5vj3")

[node name="KnockbackComponent" parent="Components" node_paths=PackedStringArray("body") instance=ExtResource("8_eg40r")]
body = NodePath("../..")

[node name="HitboxComponent" parent="Components" node_paths=PackedStringArray("health_component", "knockback_component") instance=ExtResource("9_bsni6")]
visible = false
health_component = NodePath("../HealthComponent")
knockback_component = NodePath("../KnockbackComponent")

[node name="hitbox" type="CollisionShape2D" parent="Components/HitboxComponent"]
position = Vector2(-3.333334, -18.333332)
shape = SubResource("RectangleShape2D_y5vj3")

[node name="HealthComponent" parent="Components" node_paths=PackedStringArray("death_component") instance=ExtResource("10_bseha")]
death_component = NodePath("../DeathComponent")

[node name="DeathComponent" parent="Components" instance=ExtResource("11_syx0i")]

[node name="WanderComponent" parent="Components" node_paths=PackedStringArray("movement_component") instance=ExtResource("13_l6gv4")]
movement_component = NodePath("../MovementComponent")

[node name="DeathParticleComponent" parent="Components" node_paths=PackedStringArray("death_component") instance=ExtResource("14_bseha")]
script = ExtResource("15_syx0i")
death_component = NodePath("../DeathComponent")
death_particle = ExtResource("16_l0yf8")

[connection signal="timeout" from="attack" to="." method="_on_attack_timeout"]
[connection signal="animation_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_changed"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
